fix(ProfileMapper): WIP ProfileMapper Tests